<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tosca_mandu_light"
    tools:context=".ui.auth.AuthActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/logo_landscape"
        android:layout_width="183dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_landscape"
        android:src="@drawable/logo_landscape"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/image_vintage"
        android:layout_width="330dp"
        android:layout_height="329dp"
        android:layout_marginHorizontal="32dp"
        android:contentDescription="@string/vintage"
        android:src="@drawable/vintage_onboard"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/text_long_description"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_landscape"
        app:layout_constraintVertical_bias="0.45"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_long_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/long_auth_description"
        android:textColor="@color/tosca_mandu_dark"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/button_google_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_google_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="48dp"
        android:paddingVertical="12dp"
        android:text="@string/google_sign_in"
        android:visibility="invisible"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>